; ModuleID = '/home/carl/AnghaBench/vlc/modules/video_output/xcb/extr_events.c_vlc_xcb_Manage.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/video_output/xcb/extr_events.c_vlc_xcb_Manage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [17 x i8] c"X server failure\00", align 1
@VLC_EGENERIC = common dso_local global i32 0, align 4
@VLC_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vlc_xcb_Manage(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  br label %7

7:                                                ; preds = %11, %2
  %8 = load i32*, i32** %5, align 8
  %9 = call i32* @xcb_poll_for_event(i32* %8)
  store i32* %9, i32** %6, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %15

11:                                               ; preds = %7
  %12 = load i32*, i32** %4, align 8
  %13 = load i32*, i32** %6, align 8
  %14 = call i32 @ProcessEvent(i32* %12, i32* %13)
  br label %7

15:                                               ; preds = %7
  %16 = load i32*, i32** %5, align 8
  %17 = call i64 @xcb_connection_has_error(i32* %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %15
  %20 = load i32*, i32** %4, align 8
  %21 = call i32 @msg_Err(i32* %20, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  %22 = load i32, i32* @VLC_EGENERIC, align 4
  store i32 %22, i32* %3, align 4
  br label %25

23:                                               ; preds = %15
  %24 = load i32, i32* @VLC_SUCCESS, align 4
  store i32 %24, i32* %3, align 4
  br label %25

25:                                               ; preds = %23, %19
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i32* @xcb_poll_for_event(i32*) #1

declare dso_local i32 @ProcessEvent(i32*, i32*) #1

declare dso_local i64 @xcb_connection_has_error(i32*) #1

declare dso_local i32 @msg_Err(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
